<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/noInternetDialog"
    android:layout_width="wrap_content"
    android:layout_height="345dp"
    android:layout_gravity="center"
    app:cardElevation="30dp"
    app:cardCornerRadius="38dp"
    android:elevation="40dp">
...
